[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/audio-controls/audiocontrol.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/RussoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/settings/settings.gd" type="Script" id=4]
[ext_resource path="res://audio/sfx-test.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/temaso-tete.wav" type="AudioStream" id=6]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
LOCALES = [ "an_ES", "es", "ca", "en" ]

[node name="title_container" type="HBoxContainer" parent="."]
margin_left = 20.48
margin_right = 1003.48
margin_bottom = 86.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" parent="title_container" instance=ExtResource( 3 )]
margin_top = 19.0
margin_right = 153.484
margin_bottom = 66.3182
size_flags_horizontal = 0
size_flags_vertical = 4
shortcut = SubResource( 2 )
text = "btn_back"

[node name="RichTextLabel" type="RichTextLabel" parent="title_container"]
margin_left = 157.0
margin_right = 983.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]btn_settings[/center]"
text = "btn_settings"
fit_content_height = true

[node name="menu" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.98
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_lang" type="VBoxContainer" parent="menu"]
margin_right = 716.0
margin_bottom = 65.0
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="menu/c_lang"]
margin_right = 716.0
margin_bottom = 21.0
custom_fonts/normal_font = SubResource( 4 )
text = "title_language"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_lang" type="OptionButton" parent="menu/c_lang"]
margin_top = 25.0
margin_right = 716.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 5 )
text = "lan_aragones"
items = [ "lan_aragones", null, false, 0, null, "lan_castellano", null, false, 1, null, "lan_catalan", null, false, 2, null, "lan_ingles", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" parent="menu" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 69.0
margin_right = 716.0
margin_bottom = 163.0
bus = "music"
label = "title_music"

[node name="sfx" parent="menu" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 167.0
margin_right = 716.0
margin_bottom = 261.0
bus = "sfx"
label = "SFX"
controls = "SFX"

[node name="audios" type="AudioStreamPlayer" parent="."]

[node name="music" type="AudioStreamPlayer" parent="audios"]
stream = ExtResource( 6 )
bus = "music"

[node name="sfx" type="AudioStreamPlayer" parent="audios"]
stream = ExtResource( 5 )
bus = "sfx"
[connection signal="pressed" from="title_container/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="item_selected" from="menu/c_lang/btn_lang" to="." method="_on_btn_lang_item_selected"]
[connection signal="play_audio" from="menu/music" to="." method="_on_play_audio"]
[connection signal="stop_audio" from="menu/music" to="." method="_on_stop_audio"]
[connection signal="play_audio" from="menu/sfx" to="." method="_on_play_audio"]
[connection signal="stop_audio" from="menu/sfx" to="." method="_on_stop_audio"]
